src/tests/code/pass/pass_int_literals.u
entrypoint:~()->(i64{	0xAB +		// 171
						0x0CD + 	// 205
						0x00EF +	// 239
						0q631 +		// 409
						0b1011101 +	// 93
						0b00100011	// 35
						// :=1024+128
					}
				)