src/tests/code/fail/fail_duplicate_variable_name.u
entrypoint:~()
{
	foo:i64{1};
	foo:i64{2};
}
->(foo)